Table SUBGRUPO_GMUS {
  id bigint [pk, increment]
  codigo_gmus int [unique]
  nome varchar(255) [not null]
}

Table PRINCIPIO_ATIVO {
  id bigint [pk, increment]
  nome varchar(255) [not null]
}

Table CLASSIFICACAO {
  id bigint [pk, increment]
  nome varchar(120) [not null, unique]
  cor varchar(20) [not null]
  descricao text [not null]
  ativo boolean [not null, default: true]
}

Table MEDICAMENTO {
  id bigint [pk, increment]
  codigo_gmus varchar(50) [not null, unique]
  descricao text [not null]
  unidade varchar(80) [not null]
  subgrupo_gmus_id bigint
}

Table MEDICAMENTO_PRINCIPIO_ATIVO {
  id bigint [pk, increment]
  medicamento_id bigint [not null]
  principio_ativo_id bigint [not null]

  indexes {
    (medicamento_id, principio_ativo_id) [unique]
  }
}

Table MEDICAMENTO_CLASSIFICACAO {
  id bigint [pk, increment]
  medicamento_id bigint [not null]
  classificacao_id bigint [not null]

  indexes {
    (medicamento_id, classificacao_id) [unique]
  }
}

Table UPS {
  id bigint [pk, increment]
  codigo_gmus varchar(50) [not null]
  id_unidade_gmus varchar(50) [not null]
  nome varchar(255) [not null]
  participa_competencia boolean [not null, default: true]
  compoe_estoque_convencional boolean [not null, default: true]

  indexes {
    (codigo_gmus, id_unidade_gmus) [unique]
  }
}

Table COMPETENCIA {
  id bigint [pk, increment]
  mes smallint [not null, note: 'Valor entre 1 e 12']
  ano int [not null]

  indexes {
    (ano, mes) [unique]
  }
}

Table LOTE {
  id bigint [pk, increment]
  medicamento_id bigint [not null]
  codigo_lote varchar(120) [not null]
  data_validade date
}

Table AUTH_USER [note: 'Tabela nativa auth_user, referenciada por settings.AUTH_USER_MODEL'] {
  id int [pk, increment]
}

Table IMPORTACAO {
  id bigint [pk, increment]
  nome_arquivo varchar(255) [not null]
  hash_arquivo varchar(64) [not null]
  tipo_relatorio varchar(80) [not null]
  data_importacao datetime [not null]
  status varchar(50) [not null, note: 'concluida | concluida_com_alertas | concluida_parcial']
  usuario_id int [not null]
  competencia_id bigint [not null]
  ups_id bigint [not null]

  indexes {
    (competencia_id, ups_id, tipo_relatorio) [unique]
  }
}

Table ESTOQUE {
  id bigint [pk, increment]
  medicamento_id bigint [not null]
  ups_id bigint [not null]
  competencia_id bigint [not null]
  lote_id bigint
  importacao_id bigint [not null]
  quantidade decimal(14,3) [not null]
}

Ref: MEDICAMENTO.subgrupo_gmus_id > SUBGRUPO_GMUS.id
Ref: MEDICAMENTO_PRINCIPIO_ATIVO.medicamento_id > MEDICAMENTO.id
Ref: MEDICAMENTO_PRINCIPIO_ATIVO.principio_ativo_id > PRINCIPIO_ATIVO.id
Ref: MEDICAMENTO_CLASSIFICACAO.medicamento_id > MEDICAMENTO.id
Ref: MEDICAMENTO_CLASSIFICACAO.classificacao_id > CLASSIFICACAO.id

Ref: LOTE.medicamento_id > MEDICAMENTO.id

Ref: IMPORTACAO.usuario_id > AUTH_USER.id
Ref: IMPORTACAO.competencia_id > COMPETENCIA.id
Ref: IMPORTACAO.ups_id > UPS.id

Ref: ESTOQUE.medicamento_id > MEDICAMENTO.id
Ref: ESTOQUE.ups_id > UPS.id
Ref: ESTOQUE.competencia_id > COMPETENCIA.id
Ref: ESTOQUE.lote_id > LOTE.id
Ref: ESTOQUE.importacao_id > IMPORTACAO.id
